Project Grid Fixes -Fixed layout problems with project items in the project section -Changed project item layout so that badges are in the same row as project type and year -Added webstack icon for projects that use html, css and javascript

--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -17,9 +17,11 @@
   --color-secondary: #353;
   --color-secondary-accent: #373;
 
+  --offset-xsmall: 0.25em;
   --offset-small: 0.5em;
   --offset-normal: 1em;
   --offset-large: 2em;
+  --offset-xlarge: 4em;
 
   --font-size-xsmall: 10pt;
   --font-size-small: 14pt;
@@ -206,6 +208,7 @@ a svg:hover:not(.no-hover) {
 }
 
 button {
+  padding: var(--offset-xsmall);
   font-size: var(--font-size-large);
   border: 2px solid;
   border-color: var(--color-text);
@@ -405,32 +408,42 @@ nav > * {
 }
 
 .project-container {
+  padding: 0 var(--offset-large) 0 var(--offset-large);
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   row-gap: 10vh;
+  column-gap: var(--offset-large);
   justify-items: center;
 }
 
-.project-item-header {
+.project-item {
+  width: 100%;
+}
+
+.project-item-info {
   display: flex;
   justify-content: space-between;
+}
+
+.project-item-type, .project-item-year {
+  white-space: nowrap;
 }
 
 .project-item-badges {
   justify-content: flex-end;
   align-self: flex-end;
+  white-space: nowrap;
 }
 
 .project-item-badges > svg {
   padding: 1px;
   width: 32px;
   height: 32px;
-  border-radius: 16px;
 }
 
 .project-item-preview > img {
-  max-width: 320px;
-  max-height: 300px;
+  width: 100%;
+  max-height: 40vw;
   object-fit: cover;
   border: 1px solid var(--color-light);
   border-radius: 6px;
@@ -439,10 +452,15 @@ nav > * {
 .project-item-footer {
   display: flex;
   justify-content: flex-end;
+  flex-direction: column;
 }
 
 .project-item-footer > * {
-  margin-left: var(--offset-small);
+  margin: var(--offset-xsmall) 0 var(--offset-xsmall) 0;
+}
+
+.project-item-footer > * > button {
+  width: 100%;
 }
 
 /* CONTACT */
@@ -481,10 +499,6 @@ footer {
 }
 
 @media only screen and (max-width: 1280px) {
-  .project-container {
-    grid-template-columns: 1fr;
-  }
-
   .splash-icons {
     padding: 0 20% 0 20%;
   }
@@ -499,5 +513,9 @@ footer {
 @media only screen and (max-width: 768px) {
   header {
     display: none;
+  }
+
+  .project-container {
+    grid-template-columns: 1fr;
   }
 }
